--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,9 +33,7 @@
   --accent: oklch(0.967 0.001 286.375);
   --accent-foreground: oklch(0.21 0.006 285.885);
   --destructive: oklch(0.577 0.245 27.325);
-  --destructive-foreground: oklch(
-    0.95 0.01 0
-  ); /* Modified for better readability */
+  --destructive-foreground: oklch(0.95 0.01 0);
   --border: oklch(0.92 0.004 286.32);
   --input: oklch(0.92 0.004 286.32);
   --ring: oklch(0.705 0.015 286.067);
@@ -75,9 +73,7 @@
   --accent: oklch(0.274 0.006 286.033);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.396 0.141 25.723);
-  --destructive-foreground: oklch(
-    0.9 0.1 25
-  ); /* Modified for better readability */
+  --destructive-foreground: oklch(0.9 0.1 25);
   --border: oklch(0.274 0.006 286.033);
   --input: oklch(0.274 0.006 286.033);
   --ring: oklch(0.442 0.017 285.786);
